# xiRetimer

./: .gitignore  Makefile  Makefile.in  README  README.in  compile.sh  configure  configure.ac  makefile  makefile.in  xiRetimer  xiretimer.dbp  xiretimer.desktop  xiretimer.desktop.in
expermients/: gs.c
gui/: a.out  curve.cpp  curve.h  make  test.cpp  test.h  xiRTAboutDialog.cpp  xiRTAboutDialog.h  xiRTFileSelectDialog.cpp  xiRTFileSelectDialog.h  xiRTMainFrame.cp_  xiRTMainFrame.cpp  xiRTMainFrame.h  xiRTPrefsDialog.cpp  xiRTPrefsDialog.h  xiRetimer  xiRetimer_wxfb.cpp  xiRetimer_wxfb.fbp  xiRetimer_wxfb.h  xiRetimer_wxfb_iconbar.fbp
rb_expermients/: fio.cpp  fio.h  marker.cpp  marker.h  rb1  rb2  rb3  rtlayer.cpp  rtlayer.h  test.cpp  test.h
src/: buffer.cpp  buffer.h  curve.cpp  curve.h  intmode_poly.h  main.cpp  main.h  make  marker.cpp  marker.h  playback.cpp  playback.h  rbprocess.h  sample.cpp  sample.h  xiarray.cpp  xiarray.h
src/gui/: RetimerAboutDialog.cpp  RetimerAboutDialog.h  RetimerMainFrame.cpp  RetimerMainFrame.h  RetimerPrefsDialog.cpp  RetimerPrefsDialog.h  main.cpp  main.h  retimer_wx.cpp  retimer_wx.cpp.in  retimer_wx.fbp  retimer_wx.h  xiRTMainFrame.cpp  xiRTMainFrame.h  xiRTPrefsDialog.cpp  xiRTPrefsDialog.h  xiRetimer_wxfb.cpp  xiRetimer_wxfb.fbp  xiRetimer_wxfb.h
